# rust_userspace_build

./: Cargo.toml  README.md  build.rs  dollar  pos_release.sh  pre_release.sh  release.toml
.cargo/: config.toml
.zed/: settings.json
crates/arch/: Cargo.toml
crates/arch/src/: _x86_64.rs  human.rs  lib.rs  macros.rs  memory.rs  traits.rs
crates/building/: Cargo.toml
crates/building/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: file.rs  lib.rs  library.rs  macros.rs  memory.rs  string.rs
crates/human/: Cargo.toml
crates/human/src/: arch.rs  lib.rs  library.rs  macros.rs  result.rs  results.rs  stdout.rs  syscall.rs
crates/info/: Cargo.toml
crates/info/src/: result.rs  stdout.rs
crates/macros/: Cargo.toml
crates/macros/src/: chain.rs  enum.rs  enums.rs  labeled_enum.rs  labeled_enum_typed.rs  labeled_typed_enum.rs  latent.rs  lib.rs  result.rs  results.rs  traits.rs  tuples.rs
crates/mathematics/: Cargo.toml
crates/mathematics/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: alloc.rs  lib.rs  macros.rs  page.rs  stack.rs
crates/proc-macros/: Cargo.toml
crates/proc-macros/src/: lib.rs
crates/result/src/: lib.rs  macros.rs
crates/results/: Cargo.toml
crates/results/src/: default.rs  lib.rs  traits.rs
crates/syscall/: Cargo.toml
crates/syscall/src/: close.rs  exit.rs  fstat.rs  lib.rs  lseek.rs  macros.rs  mmap.rs  mprotect.rs  munmap.rs  open.rs  openat.rs  openat4.rs  read.rs  result.rs  write.rs
crates/writer/: Cargo.toml
crates/writer/src/: arch.rs  lib.rs
crates/x86_64/: Cargo.toml
crates/x86_64/src/: lib.rs  macros.rs  result.rs
draft/rust/src/: lib.rs  memory.rs
draft/src/: lib.rs  section.rs
draft/src/section/: header.rs  index.rs
example/xelf/: Cargo.toml
example/xelf/src/: dtype.rs  entry.rs  header.rs  library.rs
press/2025/pibic/: Makefile  main.aux  main.blg  main.lof  main.lot  main.out  main.tex  main.toc
press/writer/: Cargo.toml
press/writer/src/: library.rs  target.rs
prompts/: a.sh
report/: README.md  compile.sh  userspace_complete_report.aux  userspace_complete_report.out  userspace_complete_report.tex  userspace_report.aux  userspace_report.nav  userspace_report.out  userspace_report.tex  userspace_report.toc  userspace_report.vrb
spec/: x86_64.links
src/: dtype.rs  entry.rs  file.rs  lib.rs  library.rs  license.rs  macros.rs  main.rs  memory.rs  panic.rs  result.rs  start.s  target.rs  traits.rs  what.rs
src/binary/: entry.rs  what.rs
src/dtype/: class_64.rs  elf32.rs  endianness.rs  header.rs  macros.rs
src/dtype/macros/: define.rs  (+1 more)
src/examples/: image_example.rs
src/file/: format.rs  information.rs  load.rs  open.rs  print.rs  result.rs  seek.rs  traits.rs
src/macros/: enums.rs  traits.rs  tuples.rs
src/memory/: alloc.rs  heap.rs  page.rs  result.rs  stack.rs
src/section/: entry.rs
src/traits/: bytes.rs  enums.rs  primitive.rs
(+217 files in other folders)
